tests/health/gold/sdk/tests__and-or-test-force.toit.gold
tests/and-or-test-force.toit:17:13: error: Logical operation argument can't be 'none'
  a2 = a or unreachable
            ^~~~~~~~~~~
